--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 dotenv = "0.15.0"
-reqwest = "0.13.2"
+reqwest = { version = "0.13.2", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.228", features = ["derive"] }
