--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ dotenv = "0.15.0"
 reqwest = { version = "0.13.2", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.228", features = ["derive"] }
+tokio-tungstenite = "0.28.0"
