--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ dotenv = "0.15.0"
 reqwest = { version = "0.13.2", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.228", features = ["derive"] }
-tokio-tungstenite = "0.28.0"
+tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
+futures-util = "0.3.32"
