--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.228", features = ["derive"] }
 tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
 futures-util = "0.3.32"
+serde_json = "1.0.149"
