--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
 futures-util = "0.3.32"
 serde_json = "1.0.149"
 anyhow = "1.0.102"
+rand = "0.10.0"
